[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/Levels/BattleMaps/TestBattleMap/BattleMap.gd" type="Script" id=1]
[ext_resource path="res://CharacterSystem/Scenes/WorldNPC.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Levels/Grid.gd" type="Script" id=3]
[ext_resource path="res://Assets/TileSets/prototype.tres" type="TileSet" id=4]
[ext_resource path="res://Scenes/UI/DebugUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Images/Prototype/Portraits/male_03.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UI/DialogUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Images/Prototype/TileHighlight.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Levels/TileHighlight.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Levels/TownMaps/TestTown/Background.gd" type="Script" id=10]
[ext_resource path="res://Assets/Images/Prototype/Parallax BG/bkgd_5.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Prototype/Parallax BG/bkgd_2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/Prototype/Parallax BG/bkgd_4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/Prototype/Parallax BG/bkgd_1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/Prototype/Parallax BG/bkgd_0.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/Prototype/Parallax BG/bkgd_3.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/Prototype/Parallax BG/bkgd_7.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/Prototype/Parallax BG/bkgd_6.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Levels/BattleMaps/TestBattleMap/BattleQueue.gd" type="Script" id=19]

[node name="BattleMap" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ParallaxBackground" parent="."]
script = ExtResource( 10 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.125, 0.125 )
motion_mirroring = Vector2( 2000, 2000 )

[node name="TextureRect" type="TextureRect" parent="Background/ParallaxLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.25, 0.25 )
motion_mirroring = Vector2( 2000, 2000 )

[node name="TextureRect" type="TextureRect" parent="Background/ParallaxLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.375, 0.375 )
motion_mirroring = Vector2( 2000, 2000 )

[node name="TextureRect" type="TextureRect" parent="Background/ParallaxLayer3"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 2000, 2000 )

[node name="TextureRect" type="TextureRect" parent="Background/ParallaxLayer4"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 16 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.625, 0.625 )
motion_mirroring = Vector2( 2000, 2000 )

[node name="TextureRect" type="TextureRect" parent="Background/ParallaxLayer5"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )

[node name="ParallaxLayer6" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.75, 0.75 )
motion_mirroring = Vector2( 2000, 2000 )

[node name="TextureRect" type="TextureRect" parent="Background/ParallaxLayer6"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )

[node name="ParallaxLayer7" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.875, 0.875 )
motion_mirroring = Vector2( 2000, 2000 )

[node name="TextureRect" type="TextureRect" parent="Background/ParallaxLayer7"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2000.0
margin_bottom = 2000.0
texture = ExtResource( 18 )

[node name="ParallaxLayer8" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 2000, 2000 )

[node name="TextureRect" type="TextureRect" parent="Background/ParallaxLayer8"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2000.0
margin_bottom = 2000.0
texture = ExtResource( 17 )

[node name="TileMap" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 1, 5, 1, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 1, 0, 11, 2, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 30, 2, 0, 31, 2, 0, 32, 2, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 2, 1, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 2, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 2, 0, 65556, 1, 0, 65557, 2, 1, 65558, 2, 1, 65559, 2, 1, 65560, 2, 1, 65561, 2, 1, 65562, 2, 1, 65563, 2, 1, 65564, 2, 1, 65565, 2, 1, 65566, 2, 1, 65567, 2, 1, 65568, 2, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131076, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 2, 1, 131094, 2, 1, 131095, 2, 1, 131096, 2, 1, 131097, 2, 1, 131098, 2, 1, 131099, 2, 1, 131100, 2, 1, 131101, 2, 1, 131102, 2, 1, 131103, 2, 1, 131104, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 0, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 2, 196629, 2, 1, 196630, 2, 1, 196631, 2, 1, 196632, 2, 1, 196633, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 2, 1, 196637, 2, 1, 196638, 2, 1, 196639, 2, 1, 196640, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 0, 0, 262147, 0, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 4, 262157, 1, 4, 262158, 1, 4, 262159, 1, 4, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 2, 262165, 2, 1, 262166, 2, 1, 262167, 2, 1, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 262171, 2, 1, 262172, 2, 1, 262173, 2, 1, 262174, 2, 1, 262175, 2, 1, 262176, 2, 0, 327680, 2, 0, 327681, 0, 0, 327682, 1, 0, 327683, 0, 0, 327684, 0, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 2, 65536, 327693, 2, 65536, 327694, 2, 65536, 327695, 2, 65536, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 2, 327701, 2, 1, 327702, 2, 1, 327703, 3, 0, 327704, 3, 0, 327705, 2, 1, 327706, 3, 0, 327707, 2, 1, 327708, 2, 1, 327709, 2, 1, 327710, 2, 1, 327711, 2, 1, 327712, 2, 0, 393216, 2, 0, 393217, 0, 0, 393218, 1, 0, 393219, 1, 0, 393220, 0, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 2, 65536, 393229, 2, 65536, 393230, 2, 65536, 393231, 2, 65536, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 2, 393237, 2, 1, 393238, 3, 0, 393239, 3, 0, 393240, 3, 0, 393241, 2, 1, 393242, 2, 1, 393243, 2, 1, 393244, 2, 1, 393245, 3, 0, 393246, 3, 0, 393247, 2, 1, 393248, 2, 0, 458752, 2, 0, 458753, 0, 0, 458754, 0, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 2, 65536, 458765, 2, 65536, 458766, 2, 65536, 458767, 2, 65536, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 2, 458773, 2, 1, 458774, 3, 0, 458775, 3, 0, 458776, 3, 0, 458777, 2, 1, 458778, 2, 1, 458779, 2, 1, 458780, 2, 1, 458781, 3, 0, 458782, 3, 0, 458783, 2, 1, 458784, 2, 0, 524288, 2, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 2, 65536, 524301, 2, 65536, 524302, 2, 65536, 524303, 2, 65536, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 2, 524309, 2, 1, 524310, 3, 0, 524311, 3, 0, 524312, 2, 1, 524313, 2, 1, 524314, 2, 1, 524315, 2, 1, 524316, 3, 0, 524317, 3, 0, 524318, 3, 0, 524319, 2, 1, 524320, 2, 0, 589824, 2, 0, 589825, 0, 0, 589826, 0, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 0, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 2, 589845, 2, 1, 589846, 2, 1, 589847, 3, 0, 589848, 2, 1, 589849, 2, 1, 589850, 2, 1, 589851, 2, 1, 589852, 3, 0, 589853, 2, 1, 589854, 2, 1, 589855, 2, 1, 589856, 2, 0, 655360, 2, 0, 655361, 0, 0, 655362, 0, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 2, 655381, 2, 1, 655382, 2, 1, 655383, 2, 1, 655384, 2, 1, 655385, 2, 1, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 2, 1, 655390, 2, 1, 655391, 2, 1, 655392, 2, 0, 720896, 2, 0, 720897, 0, 0, 720898, 0, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 2, 1, 720918, 2, 1, 720919, 2, 1, 720920, 2, 1, 720921, 3, 0, 720922, 3, 0, 720923, 3, 0, 720924, 2, 1, 720925, 2, 1, 720926, 2, 1, 720927, 2, 1, 720928, 2, 0, 786432, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 0, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 0, 0, 786451, 1, 0, 786452, 1, 0, 786453, 2, 1, 786454, 2, 1, 786455, 2, 1, 786456, 2, 1, 786457, 3, 1, 786458, 3, 0, 786459, 3, 0, 786460, 2, 1, 786461, 2, 1, 786462, 2, 1, 786463, 2, 1, 786464, 2, 0, 851968, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 1, 0, 851973, 2, 1, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 2, 1, 851988, 2, 1, 851989, 2, 1, 851990, 2, 1, 851991, 2, 1, 851992, 2, 1, 851993, 2, 1, 851994, 3, 0, 851995, 3, 0, 851996, 2, 1, 851997, 2, 1, 851998, 2, 1, 851999, 2, 1, 852000, 2, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 0, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 2, 1, 917524, 2, 1, 917525, 2, 1, 917526, 2, 1, 917527, 2, 1, 917528, 2, 1, 917529, 2, 1, 917530, 2, 1, 917531, 3, 1, 917532, 2, 1, 917533, 2, 1, 917534, 2, 1, 917535, 2, 1, 917536, 2, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 1, 0, 983045, 1, 0, 983046, 2, 1, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 2, 1, 983051, 1, 0, 983052, 1, 0, 983053, 2, 1, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 2, 1, 983061, 2, 1, 983062, 2, 1, 983063, 2, 1, 983064, 2, 1, 983065, 2, 1, 983066, 2, 1, 983067, 2, 1, 983068, 2, 1, 983069, 2, 1, 983070, 2, 1, 983071, 2, 1, 983072, 2, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 2, 1, 1048580, 1, 0, 1048581, 1, 0, 1048582, 2, 1, 1048583, 2, 1, 1048584, 2, 1, 1048585, 2, 1, 1048586, 2, 1, 1048587, 2, 1, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 2, 1, 1048598, 2, 1, 1048599, 2, 1, 1048600, 2, 1, 1048601, 2, 1, 1048602, 2, 1, 1048603, 2, 1, 1048604, 2, 1, 1048605, 2, 1, 1048606, 2, 1, 1048607, 2, 1, 1048608, 2, 0, 1114112, 0, 0, 1114114, 0, 0, 1114115, 2, 1, 1114116, 2, 1, 1114117, 2, 1, 1114118, 2, 1, 1114119, 2, 1, 1114120, 2, 1, 1114121, 2, 1, 1114122, 2, 1, 1114123, 2, 1, 1114124, 2, 1, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 2, 1, 1114134, 2, 1, 1114135, 2, 1, 1114136, 2, 1, 1114137, 2, 1, 1114138, 2, 1, 1114139, 2, 1, 1114140, 2, 1, 1114141, 2, 1, 1114142, 2, 1, 1114143, 2, 1, 1114144, 2, 0, 1179648, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 2, 1, 1179653, 2, 1, 1179654, 2, 1, 1179655, 2, 1, 1179656, 2, 1, 1179657, 2, 1, 1179658, 2, 1, 1179659, 2, 1, 1179660, 2, 1, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 2, 1, 1179670, 2, 1, 1179671, 2, 1, 1179672, 2, 1, 1179673, 2, 1, 1179674, 2, 1, 1179675, 2, 1, 1179676, 2, 1, 1179677, 2, 1, 1179678, 2, 1, 1179679, 2, 1, 1179680, 2, 0, 1245184, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 2, 1, 1245189, 2, 1, 1245190, 2, 1, 1245191, 2, 1, 1245192, 2, 1, 1245193, 2, 1, 1245194, 2, 1, 1245195, 2, 1, 1245196, 2, 1, 1245197, 2, 1, 1245198, 2, 1, 1245199, 1, 0, 1245200, 1, 0, 1245201, 1, 0, 1245202, 1, 0, 1245203, 1, 0, 1245204, 2, 1, 1245205, 2, 1, 1245206, 2, 1, 1245207, 2, 1, 1245208, 2, 1, 1245209, 2, 1, 1245210, 2, 1, 1245211, 2, 1, 1245212, 2, 1, 1245213, 2, 1, 1245214, 2, 1, 1245215, 2, 1, 1245216, 2, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 2, 1, 1310725, 2, 1, 1310726, 2, 1, 1310727, 2, 1, 1310728, 2, 1, 1310729, 2, 1, 1310730, 2, 1, 1310731, 2, 1, 1310732, 2, 1, 1310733, 2, 1, 1310734, 2, 1, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 2, 1, 1310740, 2, 1, 1310741, 2, 1, 1310742, 2, 1, 1310743, 2, 1, 1310744, 2, 1, 1310745, 2, 1, 1310746, 2, 1, 1310747, 2, 1, 1310748, 2, 1, 1310749, 2, 1, 1310750, 2, 1, 1310751, 2, 1, 1310752, 2, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 2, 1, 1376260, 2, 1, 1376261, 2, 1, 1376262, 2, 1, 1376263, 2, 1, 1376264, 2, 1, 1376265, 2, 1, 1376266, 2, 1, 1376267, 2, 1, 1376268, 2, 1, 1376269, 2, 1, 1376270, 2, 1, 1376271, 2, 1, 1376272, 1, 0, 1376273, 1, 0, 1376274, 1, 0, 1376275, 2, 1, 1376276, 2, 1, 1376277, 2, 1, 1376278, 2, 1, 1376279, 2, 1, 1376280, 2, 1, 1376281, 2, 1, 1376282, 2, 1, 1376283, 2, 1, 1376284, 2, 1, 1376285, 2, 1, 1376286, 2, 1, 1376287, 2, 1, 1376288, 2, 0, 1441792, 2, 0, 1441793, 0, 0, 1441794, 0, 0, 1441796, 2, 1, 1441797, 2, 1, 1441798, 2, 1, 1441799, 2, 1, 1441800, 2, 1, 1441801, 2, 1, 1441802, 2, 1, 1441803, 2, 1, 1441804, 2, 1, 1441805, 2, 1, 1441806, 2, 1, 1441807, 2, 1, 1441808, 1, 0, 1441809, 1, 0, 1441810, 2, 1, 1441811, 2, 1, 1441812, 2, 1, 1441813, 2, 1, 1441814, 2, 1, 1441815, 2, 1, 1441816, 2, 1, 1441817, 2, 1, 1441818, 2, 1, 1441819, 2, 1, 1441820, 2, 1, 1441821, 2, 1, 1441822, 2, 1, 1441823, 2, 1, 1441824, 2, 0, 1507328, 2, 0, 1507329, 0, 0, 1507330, 0, 0, 1507332, 2, 1, 1507333, 2, 1, 1507334, 2, 1, 1507335, 2, 1, 1507336, 2, 1, 1507337, 2, 1, 1507338, 2, 1, 1507339, 2, 1, 1507340, 2, 1, 1507341, 2, 1, 1507342, 2, 1, 1507343, 2, 1, 1507344, 1, 0, 1507345, 2, 1, 1507346, 2, 1, 1507347, 2, 1, 1507348, 2, 1, 1507349, 2, 1, 1507350, 2, 1, 1507351, 2, 1, 1507352, 2, 1, 1507353, 2, 1, 1507354, 2, 1, 1507355, 2, 1, 1507356, 2, 1, 1507357, 2, 1, 1507358, 2, 1, 1507359, 2, 1, 1507360, 2, 0, 1572864, 2, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 2, 1, 1572870, 2, 1, 1572871, 2, 1, 1572872, 2, 1, 1572873, 2, 1, 1572874, 2, 1, 1572875, 2, 1, 1572876, 2, 1, 1572877, 2, 1, 1572878, 2, 1, 1572879, 2, 1, 1572880, 2, 1, 1572881, 2, 1, 1572882, 2, 1, 1572883, 2, 1, 1572884, 2, 1, 1572885, 2, 1, 1572886, 2, 1, 1572887, 2, 1, 1572888, 2, 1, 1572889, 2, 1, 1572890, 2, 1, 1572891, 2, 1, 1572892, 2, 1, 1572893, 2, 1, 1572894, 2, 1, 1572895, 2, 1, 1572896, 2, 0, 1638400, 2, 0, 1638401, 0, 0, 1638402, 2, 1, 1638403, 2, 1, 1638404, 0, 0, 1638405, 2, 1, 1638406, 2, 1, 1638407, 2, 1, 1638408, 2, 1, 1638409, 2, 1, 1638410, 2, 1, 1638411, 2, 1, 1638412, 2, 1, 1638413, 2, 1, 1638414, 2, 1, 1638415, 2, 1, 1638416, 2, 1, 1638417, 2, 1, 1638418, 2, 1, 1638419, 2, 1, 1638420, 2, 1, 1638421, 2, 1, 1638422, 2, 1, 1638423, 2, 1, 1638424, 2, 1, 1638425, 2, 1, 1638426, 2, 1, 1638427, 2, 1, 1638428, 2, 1, 1638429, 2, 1, 1638430, 2, 1, 1638431, 2, 1, 1638432, 2, 0, 1703936, 2, 0, 1703937, 0, 0, 1703938, 2, 1, 1703939, 2, 1, 1703940, 2, 1, 1703941, 2, 1, 1703942, 2, 1, 1703943, 2, 1, 1703944, 2, 1, 1703945, 2, 1, 1703946, 2, 1, 1703947, 2, 1, 1703948, 2, 1, 1703949, 2, 1, 1703950, 2, 1, 1703951, 2, 1, 1703952, 2, 1, 1703953, 2, 1, 1703954, 2, 1, 1703955, 2, 1, 1703956, 2, 1, 1703957, 2, 1, 1703958, 2, 1, 1703959, 2, 1, 1703960, 2, 1, 1703961, 2, 1, 1703962, 2, 1, 1703963, 2, 1, 1703964, 2, 1, 1703965, 2, 1, 1703966, 2, 1, 1703967, 2, 1, 1703968, 2, 0, 1769472, 2, 0, 1769473, 0, 0, 1769474, 2, 1, 1769475, 2, 1, 1769476, 2, 1, 1769477, 2, 1, 1769478, 2, 1, 1769479, 2, 1, 1769480, 2, 1, 1769481, 2, 1, 1769482, 2, 1, 1769483, 2, 1, 1769484, 2, 1, 1769485, 2, 1, 1769486, 2, 1, 1769487, 2, 1, 1769488, 2, 1, 1769489, 2, 1, 1769490, 2, 1, 1769491, 2, 1, 1769492, 2, 1, 1769493, 2, 1, 1769494, 2, 1, 1769495, 2, 1, 1769496, 2, 1, 1769497, 2, 1, 1769498, 2, 1, 1769499, 2, 1, 1769500, 2, 1, 1769501, 2, 1, 1769502, 2, 1, 1769503, 2, 1, 1769504, 2, 0, 1835008, 2, 0, 1835009, 2, 1, 1835010, 2, 1, 1835011, 2, 1, 1835012, 2, 1, 1835013, 2, 1, 1835014, 2, 1, 1835015, 2, 1, 1835016, 2, 1, 1835017, 2, 1, 1835018, 2, 1, 1835019, 2, 1, 1835020, 2, 1, 1835021, 2, 1, 1835022, 2, 1, 1835023, 2, 1, 1835024, 2, 1, 1835025, 2, 1, 1835026, 2, 1, 1835027, 2, 1, 1835028, 2, 1, 1835029, 2, 1, 1835030, 2, 1, 1835031, 2, 1, 1835032, 2, 1, 1835033, 2, 1, 1835034, 2, 1, 1835035, 2, 1, 1835036, 2, 1, 1835037, 2, 1, 1835038, 2, 1, 1835039, 2, 1, 1835040, 2, 0, 1900544, 2, 0, 1900545, 2, 1, 1900546, 2, 1, 1900547, 2, 1, 1900548, 2, 1, 1900549, 2, 1, 1900550, 2, 1, 1900551, 2, 1, 1900552, 2, 1, 1900553, 2, 1, 1900554, 2, 1, 1900555, 2, 1, 1900556, 2, 1, 1900557, 2, 1, 1900558, 2, 1, 1900559, 2, 1, 1900560, 2, 1, 1900561, 2, 1, 1900562, 2, 1, 1900563, 2, 1, 1900564, 2, 1, 1900565, 2, 1, 1900566, 2, 1, 1900567, 2, 1, 1900568, 2, 1, 1900569, 2, 1, 1900570, 2, 1, 1900571, 2, 1, 1900572, 2, 1, 1900573, 2, 1, 1900574, 2, 1, 1900575, 2, 1, 1900576, 2, 0, 1966080, 2, 0, 1966081, 2, 1, 1966082, 2, 1, 1966083, 2, 1, 1966084, 2, 1, 1966085, 2, 1, 1966086, 2, 1, 1966087, 2, 1, 1966088, 2, 1, 1966089, 2, 1, 1966090, 2, 1, 1966091, 2, 1, 1966092, 2, 1, 1966093, 2, 1, 1966094, 2, 1, 1966095, 2, 1, 1966096, 2, 1, 1966097, 2, 1, 1966098, 2, 1, 1966099, 2, 1, 1966100, 2, 1, 1966101, 2, 1, 1966102, 2, 1, 1966103, 2, 1, 1966104, 2, 1, 1966105, 2, 1, 1966106, 2, 1, 1966107, 2, 1, 1966108, 2, 1, 1966109, 2, 1, 1966110, 2, 1, 1966111, 2, 1, 1966112, 2, 0, 2031616, 2, 0, 2031617, 2, 1, 2031618, 2, 1, 2031619, 2, 1, 2031620, 2, 1, 2031621, 2, 1, 2031622, 2, 1, 2031623, 2, 1, 2031624, 2, 1, 2031625, 2, 1, 2031626, 2, 1, 2031627, 2, 1, 2031628, 2, 1, 2031629, 2, 1, 2031630, 2, 1, 2031631, 2, 1, 2031632, 2, 1, 2031633, 2, 1, 2031634, 2, 1, 2031635, 2, 1, 2031636, 2, 1, 2031637, 2, 1, 2031638, 2, 1, 2031639, 2, 1, 2031640, 2, 1, 2031641, 2, 1, 2031642, 2, 1, 2031643, 2, 1, 2031644, 2, 1, 2031645, 2, 1, 2031646, 2, 1, 2031647, 2, 1, 2031648, 2, 0, 2097152, 2, 0, 2097153, 2, 0, 2097154, 2, 0, 2097155, 2, 0, 2097156, 2, 0, 2097157, 2, 0, 2097158, 2, 0, 2097159, 2, 0, 2097160, 2, 0, 2097161, 2, 0, 2097162, 2, 0, 2097163, 2, 0, 2097164, 2, 0, 2097165, 2, 0, 2097166, 2, 0, 2097167, 2, 0, 2097168, 2, 0, 2097169, 2, 0, 2097170, 2, 0, 2097171, 2, 0, 2097172, 2, 0, 2097173, 2, 0, 2097174, 2, 0, 2097175, 2, 0, 2097176, 2, 0, 2097177, 2, 0, 2097178, 2, 0, 2097179, 2, 0, 2097180, 2, 0, 2097181, 2, 0, 2097182, 2, 0, 2097183, 2, 0, 2097184, 2, 0 )
script = ExtResource( 3 )
grid_size = Vector2( 32, 32 )

[node name="YSort" type="YSort" parent="TileMap"]

[node name="WorldNPC" parent="TileMap/YSort" instance=ExtResource( 2 )]
position = Vector2( 240, 120 )
__meta__ = {
"_edit_group_": true
}

[node name="BattleUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="BattleUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 38.0
margin_top = -59.0
margin_right = 358.0
margin_bottom = -27.0

[node name="Panel" type="Panel" parent="BattleUI/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="BattleUI/HBoxContainer/Panel"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="Panel2" type="Panel" parent="BattleUI/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="BattleUI/HBoxContainer/Panel2"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="Panel3" type="Panel" parent="BattleUI/HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="BattleUI/HBoxContainer/Panel3"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="Panel4" type="Panel" parent="BattleUI/HBoxContainer"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="BattleUI/HBoxContainer/Panel4"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="Panel5" type="Panel" parent="BattleUI/HBoxContainer"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="BattleUI/HBoxContainer/Panel5"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="Panel6" type="Panel" parent="BattleUI/HBoxContainer"]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="BattleUI/HBoxContainer/Panel6"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="DialogUI" parent="." instance=ExtResource( 7 )]

[node name="DebugUI" parent="." instance=ExtResource( 5 )]
pause_mode = 2

[node name="SpawnPoint" type="Position2D" parent="." groups=["spawn_point"]]
position = Vector2( 143, 208 )

[node name="TileHighlight" type="Position2D" parent="."]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="TileHighlight"]
texture = ExtResource( 8 )
offset = Vector2( 0, 8 )

[node name="BattleQueue" type="Node2D" parent="."]
script = ExtResource( 19 )
